Bug #27756 Memleak with insert+delete
Submitted: 11 Apr 2007 16:25 Modified: 17 Apr 2007 12:01
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Jonas Oreland Target Version:

[11 Apr 2007 16:25] Jonas Oreland
Description:
Introduced by bug fix for bug#20612

How to repeat:
.

Suggested fix:
.
[12 Apr 2007 11:47] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/24370

ChangeSet@1.2460, 2007-04-12 11:47:38+02:00, jonas@perch.ndb.mysql.com +6 -0
  ndb - bug#27756
    testcase only
    new pseudo column NDB$COPY_ROWID
[12 Apr 2007 15:55] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/24385

ChangeSet@1.2461, 2007-04-12 15:55:39+02:00, jonas@perch.ndb.mysql.com +2 -0
  ndb - bug#27756
    make sure that copy tuple is released in all cases
[15 Apr 2007 18:48] Bugs System
Pushed into 5.1.18-beta
[17 Apr 2007 12:01] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.18 and telco-6.1.6 changelogs.