ndb - bug#27756   testcase only   new pseudo column NDB$COPY_ROWID